erDiagram
    %% User Domain
    users {
        UUID id PK
        VARCHAR email
        INT time_bucket
        VARCHAR level
        VARCHAR diet_tilt
        TIMESTAMPTZ created_at
    }
    user_profile {
        UUID user_id PK,FK
        INTEGER height_cm
        NUMERIC weight_kg
        NUMERIC bmi
        VARCHAR fitness_goal
        INTEGER daily_calorie_target
    }
    user_goals {
        UUID id PK
        UUID user_id FK
        VARCHAR goal_type
        INTEGER daily_calories_target
        INTEGER protein_g
        INTEGER carbs_g
        INTEGER fat_g
        BOOLEAN is_active
    }
    weight_log {
        BIGSERIAL id PK
        UUID user_id FK
        NUMERIC weight_kg
        DATE log_date
        NUMERIC body_fat_percentage
    }
    api_key {
        UUID id PK
        UUID user_id FK
        VARCHAR key_hash
        VARCHAR name
    }

    %% Meal Planning & Tracking
    meal_plan {
        BIGSERIAL id PK
        UUID user_id FK
        JSONB plan_payload
        TIMESTAMPTZ generated_at
    }
    meal_log {
        BIGSERIAL id PK
        UUID user_id FK
        BIGINT meal_plan_id FK
        UUID recipe_id FK
        TIMESTAMPTZ consumed_at
        INTEGER calories
    }
    shopping_list {
        UUID id PK
        UUID user_id FK
        VARCHAR name
        BOOLEAN is_completed
        DECIMAL estimated_cost
    }
    shopping_list_item {
        UUID id PK
        UUID shopping_list_id FK
        VARCHAR ingredient_name
        DECIMAL quantity
        VARCHAR category
        BOOLEAN is_checked
    }

    %% Recipe Content
    recipe {
        UUID id PK
        VARCHAR title
        INT time_minutes
        VARCHAR difficulty
        JSONB nutrition_summary
        JSONB steps
    }
    ingredient {
        UUID id PK
        VARCHAR name
    }
    recipe_ingredient {
        UUID recipe_id PK,FK
        UUID ingredient_id PK,FK
        NUMERIC quantity
        VARCHAR unit
    }
    user_saved_recipe {
        UUID user_id PK,FK
        UUID recipe_id PK,FK
        TIMESTAMPTZ saved_at
    }

    %% Workout Content
    workout_video {
        UUID id PK
        VARCHAR youtube_id
        VARCHAR title
        INT duration_minutes
        VARCHAR level
        TEXT[] equipment
        TEXT[] body_part
    }
    exercise_videos {
        UUID id PK
        TEXT exercise_slug
        TEXT exercise_name
        TEXT video_url
        TEXT r2_key
        TEXT primary_category
    }
    user_saved_workout {
        UUID user_id PK,FK
        UUID workout_id PK,FK
        TIMESTAMPTZ saved_at
    }

    %% Nutrition Data (Reference)
    food_nutrition {
        UUID id PK
        VARCHAR food_key UK
        VARCHAR display_name
        NUMERIC calories
        NUMERIC protein
        NUMERIC fat
        NUMERIC carbs
    }
    food_synonym {
        UUID id PK
        VARCHAR synonym
        VARCHAR canonical_food_key FK
    }
    usda_food {
        BIGSERIAL id PK
        VARCHAR fdc_id
        VARCHAR name
        VARCHAR category
    }
    usda_food_nutrition {
        BIGSERIAL id PK
        BIGINT food_id FK
        NUMERIC calories
        NUMERIC protein_g
        NUMERIC fat_g
        NUMERIC carbs_g
    }
    usda_food_alias {
        BIGSERIAL id PK
        BIGINT food_id FK
        VARCHAR alias
    }

    %% AI & Analysis
    image_query {
        UUID id PK
        UUID user_id FK
        VARCHAR type
        JSONB detected_hints
    }
    retrieval_result {
        UUID id PK
        UUID query_id FK
        VARCHAR item_type
        UUID item_id
    }
    feedback {
        UUID id PK
        UUID user_id FK
        VARCHAR item_type
        UUID item_id
        INT rating
    }

    %% Relationships
    users ||--|| user_profile : "has profile"
    users ||--o{ user_goals : "sets goals"
    users ||--o{ weight_log : "tracks weight"
    users ||--o{ api_key : "owns"
    
    users ||--o{ meal_plan : "generates"
    users ||--o{ meal_log : "logs meals"
    users ||--o{ shopping_list : "creates lists"
    
    users ||--o{ user_saved_recipe : "saves"
    users ||--o{ user_saved_workout : "saves"
    users ||--o{ image_query : "analyzes food/workout"
    users ||--o{ feedback : "provides"

    meal_plan ||--o{ meal_log : "contains"
    meal_log }o--|| recipe : "references"
    
    shopping_list ||--o{ shopping_list_item : "contains"

    recipe ||--o{ recipe_ingredient : "contains"
    ingredient ||--o{ recipe_ingredient : "used in"
    
    recipe ||--o{ user_saved_recipe : "saved by"
    workout_video ||--o{ user_saved_workout : "saved by"

    food_synonym }o--|| food_nutrition : "maps to"
    
    usda_food ||--|| usda_food_nutrition : "has nutrition"
    usda_food ||--o{ usda_food_alias : "known as"
    
    image_query ||--o{ retrieval_result : "yields"
